# ComputerVision-C--Library

./: CMakeLists.txt  README.md  gtk_compile_line.txt  main.cpp
Documentation/: README.md
Documentation/Word/: Task #4.docx
examples/: 1- Hough.py  Hough_circle_random_radius.py  contour_area_perimeter.cpp  harris_example.cpp  hough_test.cpp  time_test.cpp
examples/Hough/: 2.1- Hough_circle.py
examples/KMeans/: kmeans_example.cpp
examples/Region Growing/: main.cpp
examples/SIFT/: 1-OpenCV_SIFT_test.py  2-My_SIFT_test.py  2-My_SIFT_test_bak.py  SIFT_example.cpp
fft/: Makefile  main.cpp  python_test.py
include/: FFT_Filter.h  Hough.h  SIFT.hpp  contour.h  data.h  equalization.h  histogram.h  kernels_filter.h  normalization.h  polygon.h  snake.h  threshold.h
include/GUI/: GUI.h
include/edges/: canny.h  prewitt.h  roberts.h  sobel.h
include/filters/: average_filter.h  gaussian_filter.h  median_filter.h
include/noise/: add_noise.h
include/read_write/: readwrite.h
include/segmentation/: AGG.h  Meanshift.h  kmeans.h  region_growing.h
res/: task1_gui.glade  task2_gui.glade  task3_gui.glade  task4_gui.glade  task4_gui.glade~
src/: FFT_Filter.cpp  Hough.cpp  contour.cpp  data.cpp  equalization.cpp  harris.cpp  histogram.cpp  kernels_filter.cpp  normalization.cpp  polygon.cpp  snake.cpp  threshold.cpp
src/GUI/: GUI_init.cpp  GUI_signals.cpp
src/edges/: canny.cpp  prewitt.cpp  roberts.cpp  sobel.cpp
src/filters/: average_filter.cpp  gaussian_filter.cpp  median_filter.cpp
src/matching/: NCC.cpp
src/noise/: gauss_noise.cpp  salt_pepper.cpp  (+1 more)
(+14 files in other folders)
